--- a/packages/local-client/package.json
+++ b/packages/local-client/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "codebook",
+  "name": "local-client",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@monaco-editor/react": "^4.4.5",
